name:                coinmetrics-all-blockchains
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag binance
  description:         Support Binance
  default:             True
  manual:              True

flag bitcoin
  description:         Support Bitcoin
  default:             True
  manual:              True

flag cardano
  description:         Support Cardano
  default:             True
  manual:              True

flag cosmos
  description:         Support Cosmos
  default:             True
  manual:              True

flag eos
  description:         Support Eos
  default:             True
  manual:              True

flag ethereum
  description:         Support Ethereum
  default:             True
  manual:              True

flag grin
  description:         Support Grin
  default:             True
  manual:              True

flag monero
  description:         Support Monero
  default:             True
  manual:              True

flag nem
  description:         Support Nem
  default:             True
  manual:              True

flag neo
  description:         Support Neo
  default:             True
  manual:              True

flag ripple
  description:         Support Ripple
  default:             True
  manual:              True

flag rosetta
  description:         Support Rosetta
  default:             True
  manual:              True

flag stellar
  description:         Support Stellar
  default:             True
  manual:              True

flag tendermint
  description:         Support Tendermint
  default:             True
  manual:              True

flag tezos
  description:         Support Tezos
  default:             True
  manual:              True

flag tron
  description:         Support Tron
  default:             True
  manual:              True

flag waves
  description:         Support Waves
  default:             True
  manual:              True

library
  exposed-modules:
    CoinMetrics.BlockChain.All
  build-depends:
    base
    , coinmetrics
    , text
    , unordered-containers

  if flag(binance)
    build-depends:       coinmetrics-binance
    cpp-options:         -DCM_SUPPORT_BINANCE

  if flag(bitcoin)
    build-depends:       coinmetrics-bitcoin
    cpp-options:         -DCM_SUPPORT_BITCOIN

  if flag(cardano)
    build-depends:       coinmetrics-cardano
    cpp-options:         -DCM_SUPPORT_CARDANO

  if flag(cosmos)
    build-depends:       coinmetrics-cosmos
    cpp-options:         -DCM_SUPPORT_COSMOS

  if flag(eos)
    build-depends:       coinmetrics-eos
    cpp-options:         -DCM_SUPPORT_EOS

  if flag(ethereum)
    build-depends:       coinmetrics-ethereum
    cpp-options:         -DCM_SUPPORT_ETHEREUM

  if flag(grin)
    build-depends:       coinmetrics-grin
    cpp-options:         -DCM_SUPPORT_GRIN

  if flag(monero)
    build-depends:       coinmetrics-monero
    cpp-options:         -DCM_SUPPORT_MONERO

  if flag(nem)
    build-depends:       coinmetrics-nem
    cpp-options:         -DCM_SUPPORT_NEM

  if flag(neo)
    build-depends:       coinmetrics-neo
    cpp-options:         -DCM_SUPPORT_NEO

  if flag(ripple)
    build-depends:       coinmetrics-ripple
    cpp-options:         -DCM_SUPPORT_RIPPLE

  if flag(rosetta)
    build-depends:       coinmetrics-rosetta
    cpp-options:         -DCM_SUPPORT_ROSETTA

  if flag(stellar)
    build-depends:       coinmetrics-stellar
    cpp-options:         -DCM_SUPPORT_STELLAR

  if flag(tendermint)
    build-depends:       coinmetrics-tendermint
    cpp-options:         -DCM_SUPPORT_TENDERMINT

  if flag(tezos)
    build-depends:       coinmetrics-tezos
    cpp-options:         -DCM_SUPPORT_TEZOS

  if flag(tron)
    build-depends:       coinmetrics-tron
    cpp-options:         -DCM_SUPPORT_TRON

  if flag(waves)
    build-depends:       coinmetrics-waves
    cpp-options:         -DCM_SUPPORT_WAVES

  ghc-options:         -Wall
  default-language:    Haskell2010
