name:                coinmetrics-binance
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Binance
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , cereal
    , coinmetrics
    , coinmetrics-tendermint
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , memory
    , protobuf
    , text
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
