name:                coinmetrics-cardano
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Cardano
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , coinmetrics
    , hanalytics-avro
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , memory
    , text
    , unordered-containers
    , vector
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
