name:                coinmetrics-eos
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.EOS
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , coinmetrics
    , hanalytics-avro
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , text
    , time
    , vector
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
