name:                coinmetrics-eos
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.EOS
    CoinMetrics.EOSArchive
  build-depends:
    aeson
    , base
    , bytestring
    , cereal
    , coinmetrics
    , hanalytics-base
    , http-client
    , stm
    , text
    , time
    , unordered-containers
    , vector
    , websockets
  ghc-options:         -Wall
  default-language:    Haskell2010
