name:                coinmetrics-ethereum
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable coinmetrics-ethereum-export
  main-is:           ethereum-export.hs
  other-modules:
    CoinMetrics.Ethereum
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , coinmetrics
    , http-client
    , memory
    , optparse-applicative
    , text
    , vector
  default-language:    Haskell2010
