name:                coinmetrics-ethereum
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Ethereum
    CoinMetrics.Ethereum.ERC20
    CoinMetrics.Ethereum.Util
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , coinmetrics
    , hanalytics-avro
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , memory
    , text
    , unordered-containers
    , vector
  default-language:    Haskell2010
