name:                coinmetrics-export
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable coinmetrics-export
  main-is:           coinmetrics-export.hs
  other-modules:
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , cereal
    , coinmetrics
    , coinmetrics-bitcoin
    , coinmetrics-cardano
    , coinmetrics-eos
    , coinmetrics-ethereum
    , coinmetrics-iota
    , coinmetrics-monero
    , coinmetrics-nem
    , coinmetrics-neo
    , coinmetrics-ripple
    , coinmetrics-stellar
    , hanalytics-base
    , hanalytics-bigquery
    , hanalytics-postgres
    , directory
    , diskhash
    , http-client
    , http-client-tls
    , memory
    , optparse-applicative
    , postgresql-libpq
    , stm
    , text
    , vector
  default-language:    Haskell2010
