name:                coinmetrics-export
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable coinmetrics-export
  main-is:           coinmetrics-export.hs
  other-modules:
    CoinMetrics.Export.Storage
    CoinMetrics.Export.Storage.AvroFile
    CoinMetrics.Export.Storage.Elastic
    CoinMetrics.Export.Storage.Postgres
    CoinMetrics.Export.Storage.PostgresFile
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , cereal
    , coinmetrics
    , coinmetrics-all-blockchains
    , coinmetrics-iota
    , hanalytics-base
    , hanalytics-bigquery
    , hanalytics-postgres
    , directory
    , diskhash
    , http-client
    , http-client-tls
    , memory
    , optparse-applicative
    , postgresql-libpq
    , stm
    , text
    , unordered-containers
    , vector
  default-language:    Haskell2010
