name:                coinmetrics-export
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable coinmetrics-export
  main-is:           coinmetrics-export.hs
  other-modules:
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , cereal
    , coinmetrics
    , coinmetrics-all-blockchains
    , coinmetrics-iota
    , coinmetrics-storage
    , connection
    , data-default
    , hanalytics-base
    , hanalytics-bigquery
    , hanalytics-postgres
    , directory
    , diskhash
    , http-client
    , http-client-tls
    , memory
    , optparse-applicative
    , postgresql-libpq
    , process
    , stm
    , text
    , unordered-containers
    , vector
  -- -O0 added temporarily to avoid space leak
  ghc-options:         -threaded -Wall -O0
  default-language:    Haskell2010
