name:                coinmetrics-iota
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Iota
  build-depends:
    aeson
    , base
    , bytestring
    , cereal
    , coinmetrics
    , http-client
    , memory
    , text
    , vector
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
