name:                coinmetrics-neo
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Neo
  build-depends:
    aeson
    , base
    , coinmetrics
    , hanalytics-base
    , scientific
    , text
    , time
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
