name:                coinmetrics-stellar
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Stellar
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , cereal
    , coinmetrics
    , data-default
    , hanalytics-avro
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , stm
    , text
    , vector
    , zlib
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
