name:                coinmetrics-stellar
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Stellar
  build-depends:
    aeson
    , base
    , bytestring
    , cereal
    , coinmetrics
    , cryptonite
    , data-default
    , hanalytics-base
    , http-client
    , memory
    , stm
    , text
    , time
    , unordered-containers
    , vector
    , zlib
  ghc-options:         -Wall
  default-language:    Haskell2010
