cabal-version:       3.0
name:                coinmetrics-stellar
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  

library
  exposed-modules:
    CoinMetrics.Stellar
  build-depends:
    aeson
    , base
    , bytestring
    , coinmetrics
    , cryptonite
    , data-default
    , hanalytics-base
    , http-client
    , memory
    , stm
    , text
    , time
    , unordered-containers
    , vector
    , zlib
  cxx-sources:
    coinmetrics-stellar.cpp
  extra-libraries:
    xdrpp
    stdc++
  ghc-options:         -Wall
  cxx-options:         -Wall -O3 -std=c++17
  default-language:    Haskell2010
