name:                coinmetrics-storage
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Export.Storage
    CoinMetrics.Export.Storage.AvroFile
    CoinMetrics.Export.Storage.Elastic
    CoinMetrics.Export.Storage.Postgres
    CoinMetrics.Export.Storage.PostgresFile
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , coinmetrics
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , postgresql-libpq
    , text
  ghc-options:         -Wall
  default-language:    Haskell2010
