name:                coinmetrics-waves
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Waves
  build-depends:
    aeson
    , avro
    , base
    , coinmetrics
    , hanalytics-avro
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , text
    , vector
  default-language:    Haskell2010
