name:                coinmetrics
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.BlockChain
    CoinMetrics.JsonRpc
    CoinMetrics.Schema.Util
    CoinMetrics.Unified
    CoinMetrics.Util
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , hanalytics-base
    , hanalytics-postgres
    , hashable
    , http-client
    , memory
    , scientific
    , text
    , time
    , vector
  default-language:    Haskell2010
