name:                coinmetrics
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.BlockChain
    CoinMetrics.JsonRpc
    CoinMetrics.Schema.Flatten
    CoinMetrics.Schema.Util
    CoinMetrics.Util
    CoinMetrics.WebCache
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , directory
    , hanalytics-avro
    , hanalytics-base
    , hanalytics-bigquery
    , hanalytics-postgres
    , hashable
    , http-client
    , http-types
    , memory
    , network-uri
    , scientific
    , tagged
    , text
    , template-haskell
    , time
    , unordered-containers
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
